objects/Product_Process_Task__c.object
<CustomObject>
    <fields>
        <fullName>Assign_to_Role__c</fullName>
        <label>Assign to Role</label>
        <picklist>
            <picklistValues>
                <fullName>Dealer Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Process_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Timeframe__c</fullName>
        <inlineHelpText>Deadline for completion after task creation (Within ___ # of days)</inlineHelpText>
        <label>Completion Timeframe</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Milestone__c</fullName>
        <label>Parent Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Process__c</fullName>
        <label>Product Process</label>
        <referenceTo>Product_Process__c</referenceTo>
        <relationshipLabel>Product Process Tasks</relationshipLabel>
        <relationshipName>Product_Process_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <label>Product Process Task</label>
    <nameField>
        <label>Product Process Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Process Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>